[package]
name = "reflector"
version = "0.1.0"
edition = "2024"

[dependencies.clap]
version = "4.5.32"
features = ["derive"]

[dependencies.chrono]
version = "0.4.40"

[dependencies.base64]
version = "0.22.1"

[dependencies.reqwest]
version = "0.12.15"
features = ["json", "blocking"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.rayon]
version = "1.10.0"

[dependencies.tempfile]
version = "3.19.1"

[dependencies.wait-timeout]
version = "0.2.1"

[dependencies.regex]
version = "1.11.1"

[dependencies.url]
version = "2.5.4"

[dependencies.log]
version = "0.4.27"

[dependencies.fern]
version = "0.7.1"
features = ["colored"]

[dependencies.thiserror]
version = "2.0.12"

[dependencies.anyhow]
version = "1.0.97"

[dependencies.expanduser]
version = "1.2.2"
